@@ -9,6 +9,9 @@
 
  Changes between 1.1.0h and 1.1.1 [xx XXX xxxx]
 
+  *) Increase the number of Miller-Rabin rounds for DSA key generating to 64.
+     [Kurt Roeckx]
+
   *) The 'tsget' script is renamed to 'tsget.pl', to avoid confusion when
      moving between systems, and to avoid confusion when a Windows build is
      done with mingw vs with MSVC.  For POSIX installs, there's still a
